--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -6,6 +6,10 @@ test:
   sessions:
     default:
       uri: mongodb://localhost:27017/test
+ci:
+  sessions:
+    default:
+      uri: <%= ENV['MONGOLAB_URI'] %>
 production:
   sessions:
     default:
